various minor updates

--- a/demo-R.ipynb
+++ b/demo-R.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "# 2) Some basic Markdown formatting\n",
     "\n",
-    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
+    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `exp(7)`, and we can embed the code in a static code block as follows:\n",
     "```\n",
     "a = 7 %% 5\n",
     "b = exp(a)\n",
@@ -79,9 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,9 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -181,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -520,9 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -951,5 +943,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
