--- a/demo-bash.ipynb
+++ b/demo-bash.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# 2) Some basic Markdown formatting\n",
     "\n",
-    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
+    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `exp(7)`, and we can embed the code in a static code block as follows:\n",
     "```\n",
     "a = 7 %% 5\n",
     "b = exp(a)\n",
@@ -81,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -103,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -147,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -181,9 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -212,6 +204,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Bash",
    "language": "bash",
@@ -225,5 +218,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
