--- a/dynamic-docs.Rmd
+++ b/dynamic-docs.Rmd
@@ -13,18 +13,17 @@ opts_chunk$set(engine='bash') # because we're using a lot of bash, let's set as 
 
 This tutorial covers the basics of creating documents that combine code chunks, mathematical notation, and text. We'll cover R, Python and bash shell chunks in the context of documents written with LaTeX, Markdown, and Jupyter (formerly IPython Notebook). 
 
-In the future, a screencast of the material may accompany this document.
+This tutorial was developed using a virtual machine developed here at Berkeley, the [Berkeley Common Environment (BCE)](http://bce.berkeley.edu). BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You'll also need to run the commands in *bce.sh* to make sure all the necessary software for this tutorial is installed. You're welcome to try using BCE with this tutorial, but I should not that we haven't updated BCE recently and the VirtualBox software on which BCE will run can be a pain.
 
-We'll use a virtual machine developed here at Berkeley, the [Berkeley Common Environment (BCE)](http://bce.berkeley.edu). BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You'll also need to run the commands in *bce.sh* to make sure all the necessary software for this tutorial is installed.
+If you'd like to work on your own machine, you can, but you'll need to install the following:
+* a LaTeX installation such as MacTex (Mac) or MiKTeX (Windows).
+* R (and optionally RStudio).
+* the knitr and rmarkdown packages for R.
+* Jupyter and the R kernel for Jupyter (you can skip this if you just want to use the R Markdown and knitr tools).
 
-That said, if you'd like to work on your own machine, you can. But you'll need to install the following:
-* a LaTeX installation such as MacTex (Mac) or MiKTeX (Windows)
-* R (and optionally RStudio)
-* the knitr and rmarkdown packages for R
-* Jupyter and the R kernel for Jupyter 
+Department and university servers that you may have access to may also have some or all of this software already installed.
 
-
-This tutorial assumes you are able to use the UNIX command line; we provide a tutorial on the [Basics of UNIX](http://statistics.berkeley.edu/computing/training/tutorials) in the context of BCE. This tutorial also assumes basic familiarity with LaTeX; more details on LaTeX are available in our [quick introduction to LaTeX tutorial](http://statistics.berkeley.edu/computing/training/tutorials).
+This tutorial assumes you are able to use the UNIX command line; we provide a tutorial on the [Basics of UNIX](http://statistics.berkeley.edu/computing/training/tutorials). This tutorial also assumes basic familiarity with LaTeX; more details on LaTeX are available in our [quick introduction to LaTeX tutorial](http://statistics.berkeley.edu/computing/training/tutorials).
 
 
 Materials for this tutorial, including the R markdown file that was used to create this document are available on Github at (https://github.com/berkeley-scf/tutorial-dynamic-docs).  You can download the files by doing a git clone from a terminal window on a UNIX-like machine, as follows:
@@ -32,7 +31,7 @@ Materials for this tutorial, including the R markdown file that was used to crea
 git clone https://github.com/berkeley-scf/tutorial-dynamic-docs
 ```
 
-This is a pull-yourself-up-by-your-bootstraps tutorial as this document itself is generated from an R Markdown file in the same way as we discuss herein.
+This is a pull-yourself-up-by-your-bootstraps (eat your own dog food) tutorial as this document itself is generated from an R Markdown file in the same way as we discuss herein.
 
 To create this HTML document, simply compile the corresponding R Markdown file in R as follows (the following will work from within BCE after cloning the repository as above).
 ```{r, build-html, eval = FALSE}
@@ -51,7 +50,7 @@ In general, processing the input file to create an output file involves evaluati
 
 R Markdown is a variant on the Markdown markup language that allows you to embed code chunks that are evaluated before creating the final output, unlike standard static code chunks in Markdown that are not evaluated. R Markdown files are simple text files.
 
-In *demo.Rmd* you'll see examples of embedding R, Python, and bash code chunks, as ell as the syntax involved in creating PDF, HTML, and Word output files.
+In *demo.Rmd* you'll see examples of embedding R, Python, and bash code chunks, as well as the syntax involved in creating PDF, HTML, and Word output files.
 
 # 3) LaTeX plus knitr
 
@@ -69,11 +68,13 @@ Jupyter grew out of the IPython Notebook project and provides a general way of e
 
 To work with a Jupyter notebook, you start Jupyter by running `jupyter notebook` (possibly `ipython notebook` if you have an old version of IPython) from the UNIX command line. This will open up a Jupyter interface in a browser window. From there, you can navigate to and open your notebook file (which will end in extension .ipynb). You can choose the kernel (i.e., the language for the code chunks -- Python, R, etc.) by selecting `Kernel -> Change Kernel` or by selecting the kernel you want when opening a new notebook.
 
+You may have web-based access to Jupyter notebooks via a service called JupyterHub (e.g., on the UC Berkeley Savio campus cluster or through the UC Berkeley Statistical Computing Facility). In that case you logon via a web browser and then start and interact with your notebook in the browser.
+
 The Jupyter files have some similarities to *demo.Rmd* as both R Markdown and Jupyter rely on Markdown as the format for text input. However, they handle code chunks somewhat differently.
 
 Jupyter does not allow one to insert chunks from multiple languages in the same document, so here we have demo files for inserting R chunks (*demo-R.ipynb*), bash chunks (*demo-bash.ipynb*), and Python chunks (*demo-python.ipynb*). All include instructions for generating HTML output. 
 
-To use the bash kernel, you will need to do some additional installation. In particular, in BCE please run the relevant commands in *bce.sh*.
+To use the bash kernel in BCE or on your own machine, you will need to do some additional installation. In particular, in BCE please run the relevant commands in *bce.sh*.
 
 
 
