--- a/dynamic-docs.Rmd
+++ b/dynamic-docs.Rmd
@@ -21,9 +21,9 @@ For this tutorial you'll need to install the following:
 
 Department and university servers that you may have access to may also have some or all of this software already installed.
 
-This tutorial assumes you are able to use the UNIX command line; we provide a tutorial on the [Basics of UNIX](http://statistics.berkeley.edu/computing/training/tutorials). This tutorial also assumes basic familiarity with LaTeX; more details on LaTeX are available in our [quick introduction to LaTeX tutorial](http://statistics.berkeley.edu/computing/training/tutorials).
+This tutorial assumes basic familiarity with LaTeX; more details on LaTeX are available in our [quick introduction to LaTeX tutorial](http://statistics.berkeley.edu/computing/training/tutorials).
 
-This tutorial was developed using a virtual machine developed here at Berkeley, the [Berkeley Common Environment (BCE)](http://bce.berkeley.edu). BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You'll also need to run the commands in *bce.sh* to make sure all the necessary software for this tutorial is installed. You're welcome to try using BCE with this tutorial, but we haven't updated BCE recently and the VirtualBox software on which BCE will run can be a pain.
+You should be able to follow the tutorial on any of MacOS, Windows or Linux. This tutorial was developed using a virtual machine developed here at Berkeley, the [Berkeley Common Environment (BCE)](http://bce.berkeley.edu). BCE is a virtual Linux machine - basically it is a Linux computer that you can run within your own computer, regardless of whether you are using Windows, Mac, or Linux. This provides a common environment so that things behave the same for all of us. You'll also need to run the commands in *bce.sh* to make sure all the necessary software for this tutorial is installed. You're welcome to try using BCE with this tutorial, but we don't recommend it as we haven't updated BCE recently and the VirtualBox software on which BCE will run can be a pain.
 
 Materials for this tutorial, including the R markdown file that was used to create this document are available on Github at (https://github.com/berkeley-scf/tutorial-dynamic-docs).  You can download the files by doing a git clone from a terminal window on a UNIX-like machine, as follows:
 ```{r, clone, eval=FALSE}
@@ -32,10 +32,13 @@ git clone https://github.com/berkeley-scf/tutorial-dynamic-docs
 
 This is a pull-yourself-up-by-your-bootstraps (eat your own dog food) tutorial as this document itself is generated from an R Markdown file in the same way as we discuss herein.
 
-To create this HTML document, simply compile the corresponding R Markdown file in R as follows (the following will work from within BCE after cloning the repository as above).
+To create this HTML document, simply compile the corresponding R Markdown file in R as follows.
 ```{r, build-html, eval = FALSE}
 Rscript -e "library(knitr); knit2html('dynamic-docs.Rmd')"
 ```
+
+Or from within R, run `library(knitr); knit2html('dynamic-docs.Rmd')`.
+
 This tutorial by Christopher Paciorek is licensed under a Creative Commons Attribution 3.0 Unported License.
 
 
